🐛 Fix herolanding prod rendering, alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;700;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@700;900&display=swap");
 
 * {
   box-sizing: border-box;
@@ -134,7 +134,7 @@ textarea {
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  background-color: #A7A6A6;
+  background-color: #a7a6a6;
   overflow: hidden;
 }
 
@@ -142,9 +142,9 @@ textarea {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  border-right: 1.5rem solid #40BEB2;
+  border-right: 1.5rem solid #40beb2;
   border-top: 1.5rem solid transparent;
-  border-bottom: 1.5rem solid transparent;  
+  border-bottom: 1.5rem solid transparent;
   animation-name: spin;
   animation-duration: 1s;
   animation-iteration-count: infinite;
@@ -166,5 +166,92 @@ textarea {
   }
   100% {
     transform: rotateZ(360deg);
+  }
+}
+
+/* Right Dotted - Hero Landing */
+.rightDotted {
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 1.25rem;
+  width: 3.5rem;
+  height: 6rem;
+  border-right-width: 4px;
+  border-bottom-width: 4px;
+  border-style: dashed;
+}
+
+.leftDotted {
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 1.25rem;
+  width: 3.5rem;
+  height: 6rem;
+  border-left-width: 4px;
+  border-bottom-width: 4px;
+  border-style: dashed;
+}
+
+.heroCardContainer {
+  position: relative;
+  width: 91.666667%;
+  height: 5rem;
+}
+
+.heroCard {
+  display: flex;
+  align-items: center;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.alignItemEnd {
+  align-items: flex-end;
+}
+
+.subscribeBtnSvg {
+  height: 1.25rem
+}
+
+.toast-font {
+  font-family: "Mulish", sans-serif;
+}
+
+
+/* Media Queries - Hero Landing  */
+@media only screen and (min-width: 640px) {
+  .sm-rightDotted,
+  .sm-leftDotted {
+    margin-bottom: 2rem;
+    width: 5rem;
+    height: 9rem;
+  }
+  .sm-heroCard {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+  .sm-subscribeBtnSvg {
+    height: 2rem;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .md-rightDotted,
+  .md-leftDotted {
+    width: 7rem;
+  }
+  .md-heroCardContainer {
+    width: 66.666667%;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .lg-rightDotted,
+  .lg-leftDotted {
+    width: 8rem;
   }
 }
